--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,4 +1,11 @@
 .Header {
-  display: flex;
-  justify-content: space-between;
+  padding: 50px 0 40px 0;
+  border-bottom: 1px solid #F6F6F6;
+
+  & > .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
